# mycelium

./: .dockerignore  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  PHILOSOPHY.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  readme.html  roadmap.html  rust-toolchain.toml  skillrunner.html
benches/: gateway_overhead.rs  throughput.rs
dashboards/: mycelium-grafana.json
docker/: .env.example  Dockerfile  Dockerfile.llm-agent  docker-compose.llm-agent.yml  docker-compose.three-node-test.yml  docker-compose.yml
docs/: Mycelium_Presentation.pptx  README.md  capability_market.html  config_race.html  consensus_ballot.html  conway.html  cross_group_consensus.html  dispatch.html  emergent_pool.html  epidemic.html  mcp_mesh.html  mesh_control.html  mesh_demo.html  paper.html  paper.md  philosophy.html  philosophy.md  plan_kv_persistence.md  readme.html  roadmap.html  skillrunner.html  skillrunner.md  threat-model.md  watchdog.html
examples/: .gitignore  README.md  capability_market.rs  config_race.rs  consensus_ballot.rs  conway.html  conway.rs  conway_gpu.rs  coordinator_comparison.rs  coordinator_comparison_plot.py  coordinator_comparison_runner.sh  dispatch.rs  distributed_lock.rs  epidemic.rs  hello_capability.rs  hello_mesh.rs  invoke_skill.rs  llm_agent.rs  locality_wiring.rs  mcp_mesh.rs  mesh.toml  mesh_control.html  mesh_demo.html  mesh_demo.rs  node_n0.toml  node_n1.toml  node_n2.toml  ops_console.html  ops_console.rs  prompt_skill_demo.rs  semantic_coordination.rs  three_arm_plot.py  three_arm_runner.sh  three_arm_workdist.rs  three_node_demo.rs  watchdog.rs
examples/conway-gpu/: Cargo.toml  README.md
examples/conway-gpu/src/: conway_gpu.html  main.rs
examples/coop/: Cargo.toml  README.md  ci_smoke.sh
examples/coop/src/: lib.rs
examples/coop/src/common/: bootstrap.rs  domain.rs  facts_lens.rs  loads.rs  mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: capability_decode.rs  frame_apply.rs  wire_decode.rs
langgraph-checkpoint-mycelium/: README.md  pyproject.toml
langgraph-checkpoint-mycelium/src/langgraph_checkpoint_mycelium/: __init__.py  saver.py
langgraph-checkpoint-mycelium/tests/: test_checkpointer.py
loom-spike/: Cargo.toml
loom-spike/src/: lib.rs
loom-spike/tests/: bounded_append.rs  once_guard.rs  publish.rs  unique_id.rs
mycelium-agentfacts/: Cargo.toml  README.md
mycelium-agentfacts/src/: crdt.rs  http.rs  lib.rs
mycelium-agentfacts/tests/: falsification_run26.rs
mycelium-blackboard/: Cargo.toml  ci_smoke.sh
mycelium-blackboard/examples/: README.md  microgrid.rs  microgrid_viz.html  microgrid_viz.rs
mycelium-blackboard/src/: http.rs  lib.rs  rpc.rs  store.rs  wal.rs
mycelium-blackboard/tests/: failover.rs  gateway.rs
mycelium-core/: Cargo.toml
mycelium-core/src/: codec.rs  config.rs  connection.rs  context.rs  erasure.rs  error.rs  framing.rs  hlc.rs  kv_handle.rs  kv_persist.rs  lib.rs  locality.rs  mesh_handle.rs  ops.rs  persistence.rs  rate.rs  schema_handle.rs  seen.rs  serde_fixint.rs  signal.rs  store.rs  stream.rs  swim.rs  swim_membership.rs  tls.rs  writer.rs
mycelium-guardrails/: Cargo.toml  ci_smoke.sh
mycelium-guardrails/examples/: README.md  guardrail_fleet.rs  guardrail_viz.html  guardrail_viz.rs  guardrail_wedge.rs
mycelium-guardrails/src/: apply.rs  guard.rs  lib.rs  policy.rs  verify.rs
mycelium-guardrails/tests/: guardrails.rs  verify.rs
mycelium-py/: README.md  pyproject.toml
mycelium-py/examples/: dspy_agent.py
mycelium-py/src/mycelium/: __init__.py  a2a.py  agent.py  blackboard.py  prompt_skill.py  reason.py  tuple.py  typed.py  wiki.py
mycelium-py/tests/: test_gateway.py  test_reason.py  test_typed.py
mycelium-reason/: Cargo.toml  ci_smoke.sh
mycelium-reason/examples/: README.md  fleet_reasoning.rs  reason_node.rs  reheal_node.rs
mycelium-reason/src/: blob.rs  http.rs  lib.rs  resume.rs  route.rs  trace.rs
mycelium-reason/tests/: gateway.rs  reason.rs
mycelium-ts/: README.md  package-lock.json  package.json
mycelium-tuple-space/: Cargo.toml
mycelium-tuple-space/examples/: README.md  redistribution.rs  redistribution_viz.html  redistribution_viz.rs  scrape_fleet_node.rs  scrape_worker_node.rs
mycelium-tuple-space/proptest-regressions/: store.txt
mycelium-tuple-space/src/: http.rs  lib.rs  rpc.rs  store.rs
mycelium-tuple-space/tests/: failover.rs  gateway.rs  keyed_join.rs  monitoring.rs  probes.rs  rpc_roundtrip.rs
mycelium-wasm-host/: Cargo.toml  README.md
mycelium-wasm-host/src/: artifact.rs  catalog.rs  confine.rs  host.rs  http_source.rs  lib.rs  librarian.rs  mesh_source.rs  provisioner.rs  resources.rs  runtime.rs
mycelium-wasm-host/tests/: e2e.rs
mycelium-wasm-host/tests/fixtures/: echo_component.wasm  unit_convert_component.wasm
mycelium-wasm-host/tests/fixtures/echo-component/: Cargo.toml  build.sh
mycelium-wasm-host/tests/fixtures/echo-component/src/: lib.rs
mycelium-wasm-host/tests/fixtures/unit-convert-component/: Cargo.toml  build.sh
mycelium-wasm-host/tests/fixtures/unit-convert-component/src/: lib.rs
mycelium-wasm-host/wit/: host.wit
mycelium-wiki/: Cargo.toml  ci_smoke.sh
mycelium-wiki/examples/: README.md  wiki_chat.rs  wiki_council_viz.html  wiki_council_viz.rs
mycelium-wiki/examples/corpus/council/: bus-route-12-extension.md  central-library-hours.md  elm-street-bike-lane.md  ev-charging-points.md  market-square-pedestrianisation.md  oakfield-solar-array.md  recycling-collection.md  riverside-allotments.md  station-road-parking.md
mycelium-wiki/examples/corpus/org-twin/: incident-policy.md  platform-team.md
mycelium-wiki/src/: agent.rs  broker.rs  fs.rs  http.rs  lib.rs  lint.rs  mcp.rs  model.rs  reconcile.rs  store.rs
mycelium-wiki/src/fs/: tests.rs
mycelium-wiki/tests/: access.rs  failover.rs  gateway.rs
scripts/: ci-retest.sh  scale-nightly-local.sh
src/: agent.rs  capability.rs  capability_config.rs  config.rs  connection.rs  consensus.rs  error.rs  framing.rs  hlc.rs  lib.rs  lib_tests.rs  locality.rs  main.rs  mesh_manifest.rs  node_id.rs  seen.rs  (+9 more)
(+469 files in other folders)
