[package]
name = "mycelium"
version = "1.0.0"
edition = "2021"
rust-version = "1.88"
authors = ["mycelium contributors"]
description = "Gossip protocol implementation with resource management"
license = "AGPL-3.0-only"
repository = "https://github.com/RichardEko/mycelium"
readme = "README.md"
keywords = ["distributed-systems", "gossip", "p2p", "protocol"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["cli"]
cli = ["dep:tracing-subscriber"]
# Exposes the `fuzz_internals` module re-exporting internal decoders to the
# cargo-fuzz harness under `fuzz/`. NOT part of the stable public API — only
# enable when building fuzz targets.
fuzz-internals = []
# Enables mTLS on the gossip TCP port, keypair-backed node identity, and
# consensus payload signing. Adds tokio-rustls, rcgen, and ed25519-dalek.
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rcgen", "dep:rustls-pemfile", "dep:ed25519-dalek", "dep:rand_core"]
# Enables OTEL span export from SkillRunner (opentelemetry-otlp gRPC).
otel = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:opentelemetry_sdk"]
# Exposes a Prometheus /metrics endpoint on the gateway HTTP port.
# Zero-cost when absent: all counter!/histogram!/gauge! calls compile to no-ops.
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
# Exposes A2A (Agent-to-Agent protocol) endpoints: GET /.well-known/agent.json
# and POST /a2a JSON-RPC. Adds no new dependencies — server-side only.
a2a = []
# Adds LLM-backed prompt skills: store prompt templates in the cluster KV,
# bind a node-local LLM backend, and expose as a callable capability.
llm = []

# The `fuzz/` directory is its own cargo-fuzz crate; keep it out of any
# implicit-workspace traversal from this parent manifest.
[workspace]
exclude = ["fuzz"]

[dependencies]
# Core
tokio = { version = "1.35", features = ["full", "test-util"] }
fastrand = "2"

# Data structures
dashmap = "5.4"
papaya = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
ahash = "0.8"
bincode = { version = "2", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
toml = "0.7"

# TCP keepalive configuration (unix only)
socket2 = "0.5"

# Synchronization
parking_lot = "0.12"

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# HTTP server (Layer 3 — embedded gateway for MCP bridge and language bridges)
axum         = "0.8"
tower-http   = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json   = "1.0"
futures-util = "0.3"
base64       = "0.22"
# HTTP client — used by MCP client role (connect_mcp_server) at library runtime
reqwest      = { version = "0.12", features = ["json"] }

# TLS (optional — enabled by the "tls" feature)
tokio-rustls   = { version = "0.26", optional = true }
rustls         = { version = "0.23", default-features = false, features = ["ring"], optional = true }
rcgen          = { version = "0.13", optional = true }
rustls-pemfile = { version = "2",    optional = true }
ed25519-dalek  = { version = "2",    features = ["rand_core", "pkcs8"], optional = true }
rand_core      = { version = "0.6",  features = ["getrandom"],         optional = true }

# OTEL (optional — enabled by the "otel" feature, used by skillrunner)
opentelemetry          = { version = "0.27", optional = true }
opentelemetry_sdk      = { version = "0.27", optional = true }
opentelemetry-otlp     = { version = "0.27", optional = true, features = ["grpc-tonic"] }
tracing-opentelemetry  = { version = "0.28", optional = true }

# Prometheus metrics (optional — enabled by the "metrics" feature)
metrics                     = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }

[dev-dependencies]
tokio        = { version = "1.35", features = ["full"] }
criterion    = { version = "0.5", features = ["async_tokio"] }
libc         = "0.2"
wgpu         = "22"
pollster     = "0.3"
bytemuck     = { version = "1", features = ["derive"] }
async-openai = "0.28"

[[bin]]
name = "skillrunner"
path = "src/bin/skillrunner/main.rs"

[[bench]]
name    = "throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false

[lints.clippy]
# Pre-existing pattern in test code — not worth refactoring 61 test initialisers
field_reassign_with_default = "allow"
