[package]
name = "mycelium"
version = "1.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Dr. Richard Nicholson <tathatasystems@proton.me>"]
description = "Broker-less gossip substrate for AI agent fleets: KV store, signal mesh, consensus, capability discovery"
license = "AGPL-3.0-only"
# Commercial embedding license available — see README §License or contact tathatasystems@proton.me
repository = "https://github.com/RichardEko/mycelium"
readme = "README.md"
keywords = ["distributed-systems", "gossip", "p2p", "protocol"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["cli", "gateway"]
cli = ["dep:tracing-subscriber"]
# Embedded HTTP gateway: REST/SSE/WebSocket bridge, MCP over HTTP, bulk staging.
# Pulls in Axum and related deps. Disable for bare-metal / WASM / no-std targets:
#   mycelium = { version = "1", default-features = false }
gateway = ["dep:axum", "dep:tower-http", "dep:tokio-stream", "dep:futures-util", "dep:reqwest"]
# Exposes the `fuzz_internals` module re-exporting internal decoders to the
# cargo-fuzz harness under `fuzz/`. NOT part of the stable public API — only
# enable when building fuzz targets.
fuzz-internals = []
# Enables mTLS on the gossip TCP port, keypair-backed node identity, and
# consensus payload signing. Adds tokio-rustls, rcgen, and ed25519-dalek.
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rcgen", "dep:rustls-pemfile", "dep:ed25519-dalek", "dep:rand_core"]
# Enables OTEL span export from SkillRunner (opentelemetry-otlp gRPC).
otel = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:opentelemetry_sdk"]
# Exposes a Prometheus /metrics endpoint on the gateway HTTP port.
# Zero-cost when absent: all counter!/histogram!/gauge! calls compile to no-ops.
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
# Exposes A2A (Agent-to-Agent protocol) endpoints: GET /.well-known/agent.json
# and POST /a2a JSON-RPC. Requires the embedded gateway.
a2a = ["gateway"]
# Adds LLM-backed prompt skills: store prompt templates in the cluster KV,
# bind a node-local LLM backend, and expose as a callable capability.
# Requires the embedded gateway for the prompt HTTP endpoint.
llm = ["gateway"]

# The `fuzz/` directory is its own cargo-fuzz crate; keep it out of any
# implicit-workspace traversal from this parent manifest.
[workspace]
exclude = ["fuzz"]

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
fastrand = "2"

# Data structures
papaya = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
ahash = "0.8"
bincode = { version = "2", features = ["serde"] }
bytes = { version = "1", features = ["serde"] }
toml = "0.7"

# TCP keepalive configuration (unix only)
socket2 = "0.5"

# Synchronization
parking_lot = "0.12"

# Async trait support
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# HTTP gateway (optional — enabled by the "gateway" feature)
axum         = { version = "0.8",  optional = true }
tower-http   = { version = "0.6",  features = ["cors"], optional = true }
tokio-stream = { version = "0.1",  features = ["sync"], optional = true }
futures-util = { version = "0.3",  optional = true }
# JSON / HTTP utilities used beyond just the gateway
serde_json   = "1.0"
base64       = "0.22"
# HTTP client — used by MCP client bridge, bulk transport, and capability probes.
# Optional: enabled by the "gateway" feature. Bare-metal / no-std builds that
# compile without gateway do not pull in Hyper or its transitive deps.
reqwest      = { version = "0.12", features = ["json"], optional = true }

# TLS (optional — enabled by the "tls" feature)
tokio-rustls   = { version = "0.26", optional = true }
rustls         = { version = "0.23", default-features = false, features = ["ring"], optional = true }
rcgen          = { version = "0.13", optional = true }
rustls-pemfile = { version = "2",    optional = true }
ed25519-dalek  = { version = "2",    features = ["rand_core", "pkcs8"], optional = true }
rand_core      = { version = "0.6",  features = ["getrandom"],         optional = true }

# OTEL (optional — enabled by the "otel" feature, used by skillrunner)
opentelemetry          = { version = "0.27", optional = true }
opentelemetry_sdk      = { version = "0.27", optional = true }
opentelemetry-otlp     = { version = "0.27", optional = true, features = ["grpc-tonic"] }
tracing-opentelemetry  = { version = "0.28", optional = true }

# Prometheus metrics (optional — enabled by the "metrics" feature)
metrics                     = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.16", optional = true }

[dev-dependencies]
tokio        = { version = "1.35", features = ["full", "test-util"] }
criterion    = { version = "0.5", features = ["async_tokio"] }
libc         = "0.2"
wgpu         = "22"
pollster     = "0.3"
bytemuck     = { version = "1", features = ["derive"] }
async-openai = "0.28"
proptest     = "1"

[[bin]]
name = "skillrunner"
path = "src/bin/skillrunner/main.rs"

[[bench]]
name    = "throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
incremental = false

[lints.clippy]
# Pre-existing pattern in test code — not worth refactoring 61 test initialisers
field_reassign_with_default = "allow"
