[package]
name = "mycelium-guardrails"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Dr. Richard Nicholson <tathatasystems@proton.me>"]
description = "Structural, coordinator-free guardrails for Mycelium (v3.0): a self-imposed, tier-labelled policy — what an agent may do — compiled to boundary + AgentPolicy + authorized_callers, on the public API only"
license = "AGPL-3.0-only"
repository = "https://github.com/RichardEko/mycelium"
keywords = ["guardrails", "policy", "multi-agent", "distributed-systems", "governance"]
categories = ["network-programming", "asynchronous"]

[features]
default = []
# Tier C — the hard-prevention surface: `authorized_callers` invoke-time gating plus the
# tamper-evident denial seal. Forwards `mycelium/compliance` (which pulls `tls`: an audit
# record is Ed25519-signed and `req.sender()` is only trustworthy under the tls identity).
compliance = ["mycelium/compliance"]
# The HTTP gateway edge (`/stats`, `/gateway/*`) so a node can be observed by the Ops Console — used
# by the `guardrail_viz` browser showcase; not needed by the headless examples.
gateway = ["mycelium/gateway"]
# Prometheus /metrics on the gateway — populates the Ops Console Metrics tab for guardrail_viz.
metrics-export = ["mycelium/metrics"]

[dependencies]
# Companion-crate contract: only Mycelium's PUBLIC API is used — no internal access.
# This dependency line is itself the composability proof.
mycelium = { path = "..", default-features = false }

tokio   = { version = "1.35", features = ["rt", "time", "sync"] }
tracing = "0.1"
# Operator-visible tripwires through the `metrics` facade (Run-39 floor fix): the Tier-C gate
# emits denial/admit counters. Tiny, unconditional (like wasm-host); a no-op without a recorder,
# and it flows to the node's /metrics when the embedder enables mycelium's `metrics` feature.
metrics = "0.24"

[dev-dependencies]
# test-only: the bind-verified, process-unique port allocator (retires the free_port TOCTOU
# flake class). Cargo unions this with the normal `mycelium` dep for the test target only.
mycelium = { path = "..", default-features = false, features = ["test-util"] }
tokio    = { version = "1.35", features = ["full"] }
tempfile = "3"

[[test]]
name = "guardrails"
required-features = ["compliance"]

[[test]]
name = "verify"
required-features = ["compliance"]

[[example]]
name = "guardrail_wedge"
required-features = ["compliance"]

[[example]]
name = "guardrail_fleet"
required-features = ["compliance"]

# The browser showcase: fire tool invocations at a Tier-C gate and watch an agent get structurally
# stopped, with the tamper-evident denial proof (reconstructed by a neutral observer) growing live.
# gateway + ui/viz for the Ops Console. Needs compliance (the audit-sealed proof) + gateway.
[[example]]
name = "guardrail_viz"
required-features = ["compliance", "gateway"]
