[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "mycelium-py"
version     = "0.1.0"
description = "Python SDK for the Mycelium gossip mesh — HTTP gateway client"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "httpx-sse>=0.4",
]

[project.optional-dependencies]
dev   = ["pytest>=8", "pytest-asyncio>=0.23"]
typed = ["pydantic>=2"]

[tool.hatch.build.targets.wheel]
packages = ["src/mycelium"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
